# Class-Template-Programming-Labs

./: .gitignore  CMakeLists.txt  ConstructionTeam.txt  DataBaseExecutor.cpp  DataBaseExecutor.h  Executor.cpp  Executor.h  FractionExecutor.cpp  FractionExecutor.h  PlanetsDataBase.txt  PlanetsExecutor.cpp  PlanetsExecutor.h  README.md  SolarSystem.txt  main.cpp
Fraction/: CMakeLists.txt  Fraction.cpp  Fraction.h
MechanicalEngineering/: CMakeLists.txt  MechanicalEngineering.cpp  MechanicalEngineering.h
MySet/: CMakeLists.txt  MySet.h
MyStack/: CMakeLists.txt  MyStack.h
MyVector/: CMakeLists.txt  MyVector.cpp  MyVector.h
Person/: CMakeLists.txt  Person.cpp  Person.h
Planet/: CMakeLists.txt  Planet.cpp  Planet.h  draft.cpp
Polynomial/: CMakeLists.txt  Polymonial.h  Polynomial.cpp  Polynomial.h
Stack/: CMakeLists.txt  MyStack.h
Term/: Term.cpp  Term.h  test.cpp
mymath/: mymath.cpp  mymath.h
test/: CMakeLists.txt  main.cpp
